2017-01-09 v0.2.1 zh.jin <zh.jin@catontechnology.com>
	* cdxs-12, 修复超时task会更改JD的已完成状态

2016-12-22 v0.2.0 zh.jin <zh.jin@catontechnology.com>
	* cdxs-3, 针对账号限速功能
	* cdxs-11, 增加email通知功能

2016-11-22 v0.1.1-alpha zh.jin <zh.jin@catontechnology.com>
	* old-cdxs-13, 查询包裹支持分页功能
	* old-cdxs-20, 增加task记录的字段,为报表统计做准备;使用数据库+cache代替redis来获取task信息
	* old-cdxs-22, 修复可能的传输进度超限问题
	* old-cdxs-24, 修复重复续传造成进度回退的问题

2016-10-29 v0.1.0-beta1 zh.jin <zh.jin@catontechnology.com>
	* issue-48, 修复分片被存储到不同分区上的问题,上传也要带storage url参数
	* issue-50, 重新下载需要清除原先的值,再设置起始时间
	* issue-51, 下载限速值处理并传给node
	* issue-52, node带宽以ts上的为准
	* 增加zone调度
	* issue-45, 解决SendRequestSync()等待消息的问题
	* issue-46, 删除被暂停的包裹

2016-10-08 v0.0.1-alpha2 zh.jin <zh.jin@catontechnology.com>
	* 增加统计接口
	* 修正删除无下载者的包裹,仍保留track的问题, issue-37

2016-09-23 v0.0.1-alpha1 zh.jin <zh.jin@catontechnology.com>
	主要是issue-14 ~ issue-36的处理
	* task使用redis保存信息
	* 不在job表里记录状态,使用job_detail聚合
	* 存储url记录在file表里,原来记在seg里
	* 分包序号从1开始,原先是从0开始, 兼容网页处理
	* 支持ws+ssl传输
	* 修复传输时进度或状态参数不正确的各种情况
	* Job cache延时删除,为保证客户端能取到增量数据
	* 增加node管理api实现

2016-08-24 v0.0.1-preview1 zh.jin <zh.jin@catontechnology.com>
	第一个预览版,可通过配置文件进行工作